feat: support Red Hat OpenShift platform
Configure ClusterRoleBinding for OCP platform to use
privileged SecurityContextConstraint (SCC).

    helm install miggo miggo-charts/miggo \
      --version "^0.0.31" \
      --namespace miggo-space \
      --create-namespace \
      --set "config.platform=openshift" \
      --set "miggoRuntime.enabled=true"

Towards: MIG-6585

--- a/charts/miggo/templates/miggo-runtime/resourcequota.yaml
+++ b/charts/miggo/templates/miggo-runtime/resourcequota.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.miggoRuntime.enabled }}
+{{- if and .Values.miggoRuntime.enabled (eq .Values.config.platform "gke") }}
 apiVersion: v1
 kind: ResourceQuota
 metadata:
