--- a/charts/miggo/templates/miggo-runtime/role.yaml
+++ b/charts/miggo/templates/miggo-runtime/role.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.miggoRuntime.enabled }}
+{{- if .Values.miggoRuntime.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -14,4 +14,23 @@ rules:
   - get
   - watch
   - list
-{{ end }}
+{{- end }}
+
+{{- if and .Values.miggoRuntime.enabled (eq .Values.config.platform "openshift") }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "miggo.fullname" . }}-scc-privileged
+  labels:
+  {{- include "miggo.labels" . | nindent 4 }}
+rules:
+  - apiGroups:
+    - "security.openshift.io"
+    resources:
+    - "securitycontextconstraints"
+    resourceNames:
+    - "privileged"
+    verbs:
+    - "use"
+{{- end }}
