--- a/charts/miggo/templates/miggo-scanner/role.yaml
+++ b/charts/miggo/templates/miggo-scanner/role.yaml
@@ -20,6 +20,10 @@ rules:
   resources: ["cronjobs", "jobs"]
   verbs: ["get", "list", "watch"]
 
+- apiGroups: [""]
+  resources: ["serviceaccounts/token"]
+  verbs: ["create"]
+
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
