feat: add feature flag only for gke to work with this new permisson

--- a/charts/miggo/templates/miggo-scanner/role.yaml
+++ b/charts/miggo/templates/miggo-scanner/role.yaml
@@ -20,9 +20,11 @@ rules:
   resources: ["cronjobs", "jobs"]
   verbs: ["get", "list", "watch"]
 
+{{- if eq .Values.config.platform "gke" }}
 - apiGroups: [""]
   resources: ["serviceaccounts/token"]
   verbs: ["create"]
+{{- end }}
 
 ---
 
