add token request permissions to scanner as described here - https://… (#116)
* add token request permissions to scanner as described here - https://kubernetes.io/docs/concepts/security/rbac-good-practices/#token-request

* [AUTO GITHUB] Bump chart versions

* feat: add feature flag only for gke to work with this new permisson

* feat: add feature flag only for gke to work with this new permisson

* [AUTO GITHUB] Chart README.md

---------

Co-authored-by: dvdlevanon-miggo <174447273+dvdlevanon-miggo@users.noreply.github.com>
Co-authored-by: dorgals <dor@miggo.io>
Co-authored-by: dorgals <144669708+dorgals@users.noreply.github.com>

--- a/charts/miggo/templates/miggo-scanner/role.yaml
+++ b/charts/miggo/templates/miggo-scanner/role.yaml
@@ -20,6 +20,12 @@ rules:
   resources: ["cronjobs", "jobs"]
   verbs: ["get", "list", "watch"]
 
+{{- if eq .Values.config.platform "gke" }}
+- apiGroups: [""]
+  resources: ["serviceaccounts/token"]
+  verbs: ["create"]
+{{- end }}
+
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
