--- a/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
+++ b/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
@@ -66,7 +66,25 @@ data:
           - key: tenant
             value: "${MIGGO_TENANT_ID}"
             action: insert
-    
+      
+      resource/metrics:
+        attributes:
+          - key: project_id
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant_id
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
+      attributes/metrics:
+        actions:
+          - key: project_id
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant_id
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
       metricstransform:
         transforms:
           - include: miggocol_process_uptime
@@ -111,11 +129,11 @@ data:
         {{- end }}
         metrics/sensors:
           receivers: [otlp]
-          processors: [batch, resource, attributes]
+          processors: [batch, resource/metrics, attributes/metrics]
           exporters: [debug, prometheus, otlphttp]
         metrics/collector:
           receivers: [prometheus]
-          processors: [batch, metricstransform, resource, attributes]
+          processors: [batch, metricstransform, resource/metrics, attributes/metrics]
           exporters: [debug, prometheus, otlphttp]
         traces:
           receivers: [otlp]
