--- a/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
+++ b/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
@@ -4,7 +4,10 @@ kind: ConfigMap
 metadata:
   name: collector-config-cm
 data:
-  config.yaml: |
+  collector-init-script.sh: |
+    {{ .Files.Get "files/collector-init-script.sh" | nindent 4 }}
+  
+  config-template.yaml: |
     extensions:
       health_check:
         endpoint: 0.0.0.0:{{ .Values.healthcheck.port }}
@@ -35,9 +38,9 @@ data:
                   target_label: __name__
                   replacement: 'miggocol_$1'
                 - target_label: "tenant-id"
-                  replacement: "{{ .Values.miggo.tenantId }}"
+                  replacement: "${MIGGO_TENANT_ID}"
                 - target_label: "project-id"
-                  replacement: "{{ .Values.miggo.projectId }}"
+                  replacement: "${MIGGO_PROJECT_ID}"
                 - target_label: "miggo-name"
                   replacement: "{{ .Values.miggo.clusterName }}"
                 - target_label: "node-name"
@@ -46,6 +49,42 @@ data:
                   replacement: "{{ if .Values.miggoCollector.instancePerNode }}daemonset{{ else }}deployment{{ end }}"
 
     processors:
+      resource:
+        attributes:
+          - key: project
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
+      attributes:
+        actions:
+          - key: project
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
+      resource/metrics:
+        attributes:
+          - key: project_id
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant_id
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
+      attributes/metrics:
+        actions:
+          - key: project_id
+            value: "${MIGGO_PROJECT_ID}"
+            action: insert
+          - key: tenant_id
+            value: "${MIGGO_TENANT_ID}"
+            action: insert
+      
       metricstransform:
         transforms:
           - include: miggocol_process_uptime
@@ -61,7 +100,6 @@ data:
         timeout: 10s
 
     exporters:
-
       debug:
         verbosity: {{ .Values.config.logVerbosity }}
 
@@ -91,18 +129,18 @@ data:
         {{- end }}
         metrics/sensors:
           receivers: [otlp]
-          processors: [batch]
+          processors: [batch, resource/metrics, attributes/metrics]
           exporters: [debug, prometheus, otlphttp]
         metrics/collector:
           receivers: [prometheus]
-          processors: [batch, metricstransform]
+          processors: [batch, metricstransform, resource/metrics, attributes/metrics]
           exporters: [debug, prometheus, otlphttp]
         traces:
           receivers: [otlp]
-          processors: [batch]
+          processors: [batch, resource, attributes]
           exporters: [debug, otlphttp]
         logs:
           receivers: [otlp]
-          processors: [batch]
+          processors: [batch, resource, attributes]
           exporters: [debug, otlphttp]
 {{ end }}
