feat(runtime): add Helm values to enable network and file access tracing
Towards: MIG-7030

--- a/charts/miggo/templates/miggo-runtime/daemonset.yaml
+++ b/charts/miggo/templates/miggo-runtime/daemonset.yaml
@@ -70,6 +70,8 @@ spec:
             - --metric-tls-skip-verify={{ (include "otlpTlsSkipVerify" .) }}
             - --metric-interval={{ .Values.config.metrics.interval }}
             - --disable-profiler={{ not .Values.miggoRuntime.profiler.enabled }}
+            - --enable-network-tracing={{ .Values.miggoRuntime.enableNetworkTracing }}
+            - --enable-file-access-tracing={{ .Values.miggoRuntime.enableFileAccessTracing }}
           envFrom:
           {{- with .Values.extraEnvsFrom }}
           {{- toYaml . | nindent 10 }}
