--- a/charts/miggo/tests/runtime-profiler/test.yaml
+++ b/charts/miggo/tests/runtime-profiler/test.yaml
@@ -62,6 +62,8 @@ tests:
             - --metric-tls-skip-verify=false
             - --metric-interval=60s
             - --disable-profiler=false
+            - --enable-network-tracing=false
+            - --enable-file-access-tracing=false
       - equal:
           path: spec.template.spec.containers[?(@.name == "miggo-runtime")].securityContext
           value:
