--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,11 +11,23 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate a token
+        id: generate-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ vars.GH_MIGGO_APP_ID }}
+          private-key: ${{ secrets.GH_MIGGO_APP_KEY }}
+          owner: ${{ github.repository_owner }}
+          repositories: "miggo-helm-charts"
+          
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          repository: miggo-io/miggo-helm-charts
+          show-progress: false
           fetch-depth: 0
-
+          token: "${{ steps.generate-token.outputs.token }}"
+      
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
