--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,7 @@ jobs:
           show-progress: false
           fetch-depth: 0
           token: "${{ steps.generate-token.outputs.token }}"
+          ref: 'fix/tell-chart-releaser-which-repo-to-use' # temp
       
       - name: Configure Git
         run: |
