--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,10 +47,10 @@ jobs:
           helm repo add jaeger https://jaegertracing.github.io/helm-charts
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
+        uses: ./.github/actions/helm-releaser
         with:
           charts_dir: charts
-          config: cr.yaml
+          repository: miggo-helm-charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_GENERATE_RELEASE_NOTES: true
