--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -50,7 +50,7 @@ jobs:
         uses: ./.github/actions/helm-releaser
         with:
           charts_dir: charts
-          repository: miggo-helm-charts
+          repository: miggo-io/miggo-helm-charts
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_GENERATE_RELEASE_NOTES: true
