--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,6 +27,7 @@ jobs:
           show-progress: false
           fetch-depth: 0
           token: "${{ steps.generate-token.outputs.token }}"
+          ref: 'main'
       
       - name: Configure Git
         run: |
@@ -46,9 +47,10 @@ jobs:
           helm repo add jaeger https://jaegertracing.github.io/helm-charts
 
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.6.0
+        uses: ./.github/actions/helm-releaser
         with:
           charts_dir: charts
+          repository: miggo-io/miggo-helm-charts
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: "${{ steps.generate-token.outputs.token }}"
           CR_GENERATE_RELEASE_NOTES: true
