restore sensor metrics

--- a/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
+++ b/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
@@ -134,7 +134,7 @@ data:
         metrics/sensors:
           receivers: [otlp]
           processors: [batch, resource/metrics, attributes/metrics]
-          exporters: [debug, otlphttp]
+          exporters: [debug, prometheus, otlphttp]
         metrics/collector:
           receivers: [prometheus]
           processors: [batch, metricstransform, resource/metrics, attributes/metrics]
