--- a/charts/miggo/values.yaml
+++ b/charts/miggo/values.yaml
@@ -252,6 +252,12 @@ miggoRuntime:
   nodeSelector:
     kubernetes.io/os: linux
 
+  # -- When enabled, the chart will set the GOMEMLIMIT env var to 80% of the
+  # configured resources.limits.memory. If no resources.limits.memory are
+  # defined then enabling does nothing. It is HIGHLY recommend to enable this
+  # setting and set a value for resources.limits.memory.
+  useGOMEMLIMIT: false
+
   resources:
     requests:
       cpu: 100m
@@ -282,6 +288,12 @@ miggoRuntime:
       fullPath:
       # -- Image pull policy. Specifies when Kubernetes should pull the container image
       pullPolicy:
+
+    # -- When enabled, the chart will set the GOMEMLIMIT env var to 80% of the
+    # configured resources.limits.memory. If no resources.limits.memory are
+    # defined then enabling does nothing. It is HIGHLY recommend to enable this
+    # setting and set a value for resources.limits.memory.
+    useGOMEMLIMIT: false
 
     resources:
       requests:
@@ -333,6 +345,12 @@ miggoRuntime:
       fullPath:
       # -- Image pull policy. Specifies when Kubernetes should pull the container image
       pullPolicy:
+
+    # -- When enabled, the chart will set the GOMEMLIMIT env var to 80% of the
+    # configured resources.limits.memory. If no resources.limits.memory are
+    # defined then enabling does nothing. It is HIGHLY recommend to enable this
+    # setting and set a value for resources.limits.memory.
+    useGOMEMLIMIT: false
 
     resources:
       requests:
