chore(ci): switch to official helm-unittest repo
Towards: MIG-7790

--- a/.github/workflows/run-unittests.yaml
+++ b/.github/workflows/run-unittests.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install helm unittest plugin
         run: |
-          helm plugin install https://github.com/quintush/helm-unittest
+          helm plugin install https://github.com/helm-unittest/helm-unittest.git
 
       - name: Run tests for modified charts
         run: |
