--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,12 +13,22 @@ jobs:
     steps:
       - name: Generate a token
         id: generate-token
+        if: vars.GH_MIGGO_APP_ID != ''
         uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ vars.GH_MIGGO_APP_ID }}
           private-key: ${{ secrets.GH_MIGGO_APP_KEY }}
           owner: ${{ github.repository_owner }}
           repositories: "miggo-helm-charts"
+
+      - name: Set token for checkout
+        id: set-token
+        run: |
+          if [ -n "${{ steps.generate-token.outputs.token }}" ]; then
+            echo "checkout_token=${{ steps.generate-token.outputs.token }}" >> $GITHUB_OUTPUT
+          else
+            echo "checkout_token=${{ github.token }}" >> $GITHUB_OUTPUT
+          fi
           
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,7 +36,7 @@ jobs:
           repository: miggo-io/miggo-helm-charts
           show-progress: false
           fetch-depth: 0
-          token: "${{ steps.generate-token.outputs.token }}"
+          token: "${{ steps.set-token.outputs.checkout_token }}"
           ref: 'main'
       
       - name: Configure Git
@@ -52,5 +62,5 @@ jobs:
           charts_dir: charts
           repository: miggo-io/miggo-helm-charts
         env:
-          CR_TOKEN: "${{ steps.generate-token.outputs.token }}"
+          CR_TOKEN: "${{ steps.set-token.outputs.checkout_token }}"
           CR_GENERATE_RELEASE_NOTES: true
