--- a/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
+++ b/charts/miggo/templates/miggo-collector/collector-config-cm.yaml
@@ -129,7 +129,12 @@ data:
       telemetry:
         metrics:
           level: detailed
-          address: 0.0.0.0:8888
+          readers:
+          - pull:
+              exporter:
+                prometheus:
+                  host: "0.0.0.0"
+                  port: 8888
       extensions: [health_check, oauth2client]
       pipelines:
         {{- if .Values.miggoRuntime.profiler.enabled }}
